Fixed footer covering content

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,9 @@
 @media(min-width: 768px){
     .container-1, .container-nav, .container-footer{
         display: flex;
-        /* Code to align uneven boxes on top, bottom or center
+        /* Code to align uneven boxes on top, bottom or center */
         align-items:flex-start;
-        align-items:flex-end;
+        /*align-items:flex-end;
         align-items:center;
          */
     }
@@ -11,6 +11,9 @@
 
 body{
     background-color: #252525;
+    min-height: 400px;
+    margin-bottom: 100px;
+    clear: both;
     /*color: ghostwhite;*/
     /*font-family: 'Roboto', sans-serif;*/
 }
@@ -34,6 +37,8 @@ body{
     /* If you need to change the order of the boxes
     order: 1;
     */
+    align-content: center;
+    justify-content: center;
 }
 .box-2{
     flex:2.8;
@@ -92,14 +97,6 @@ li a:hover{
 iframe {
     display:block;
     width:100%;
-}
-
-canvas {
-    background: black;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
 }
 
 .logo {
